<resources>
    <string name="app_name">DankPlacesToEat</string>

    <!-- Web API Strings -->
    <string name="API_BASE_URL">https://espressotg.info/dank/api/</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_restaurant_map">Places</string>
    <string name="action_skip_login">Skip</string>

    <!-- Strings related to preferences -->
    <string name="pref_map_settings_title">Map Settings</string>
    <string name="pref_summary_map_center">The location at the center of the map after you log in.  Can be a address, city, or lat/lon pair.</string>
    <string name="pref_title_map_center">Map Center</string>
    <string name="pref_default_map_center">Atlanta, GA</string>
    <string name="pref_summary_map_radius">The radius that you can see on the map in miles, defined from the center point.</string>
    <string name="pref_title_map_radius">Map Radius</string>

    <!-- Error strings -->
    <string name="error_loading_restaurants">Error loading restaurants!</string>
</resources>
